--- a/xueli8/denglu.html
+++ b/xueli8/denglu.html
@@ -172,7 +172,7 @@
 		// 当且仅当用户名、密码、验证码都符合条件时登录成功
 		if(a1==1 && a2==1 && a3==1){
 			alert("登录成功");
-			location = "index.html";
+			location = "https://suhan1.github.io/web2/homepage/homepage.html";
 		}
 	}
 </script>
