--- a/xueli8/index.html
+++ b/xueli8/index.html
@@ -12,9 +12,9 @@
 		<div class="topCenter">
 			<ul>
 				<li class="c">欢迎来到一源一舍，请</li>
-				<li class="a"><a href="">登录</a></li>
+				<li class="a"><a href="https://liurufeng666.github.io/web-homework/xueli8/denglu.html">登录</a></li>
 				<li>|</li>
-				<li class="a"><a href="">注册</a></li>
+				<li class="a"><a href="https://github.com/lige9/jsWeb/blob/master/%E6%B3%A8%E5%86%8C.html">注册</a></li>
 				<li class="b"><a href=""><img src="images/wx.png"></a></li>
 				<li class="b"><a href=""><img src="images/qq.png"></a></li>
 			</ul>
@@ -32,10 +32,10 @@
 		</div>
 		<ul class = "hidden" id = "hidden" style = "opacity: 0; margin-left: 1000px; margin-top: 10px;">
 			<li><a href="#" target = "_blank">查看民宿详细分类</a></li>
-			<li><a href="#" target = "_blank">海滨民宿</a></li>
-			<li><a href="#" target = "_blank">冰雪民宿</a></li>
-			<li><a href="#" target = "_blank">温泉民宿</a></li>
-			<li><a href="#" target = "_blank">传统民宿</a></li>
+			<li><a href="https://lige9.github.io/jsWeb/%E6%96%B0%E6%B5%B7%E6%BB%A8%E6%B0%91%E5%AE%BF.html" target = "_blank">海滨民宿</a></li>
+			<li><a href="https://chaiwenxin1.github.io/webzuoye/zong.html" target = "_blank">冰雪民宿</a></li>
+			<li><a href="https://liurufeng666.github.io/web-homework/xueli8/index.html" target = "_blank">温泉民宿</a></li>
+			<li><a href="https://duxinyu03.github.io/web2-finalxueli-work/TraditResidBuildings.html" target = "_blank">传统民宿</a></li>
 		</ul>
 		<div class = "Right">
 			<img src = "images/imgd06.png" alt = "scene"/> 
@@ -45,11 +45,11 @@
 	<div class="bigBox">
 		<div class="container">
 			<ul>
-    			<li><a href="#">首页</a></li>
-    			<li><a href="#">海滨民宿</a></li>
-    			<li><a href="#">冰雪民宿</a></li>
-    			<li><a href="#">温泉民宿</a></li>
-    			<li><a href="#">传统民宿</a></li>
+    			<li><a href="https://suhan1.github.io/web2/homepage/homepage.html">首页</a></li>
+    			<li><a href="https://lige9.github.io/jsWeb/%E6%96%B0%E6%B5%B7%E6%BB%A8%E6%B0%91%E5%AE%BF.html">海滨民宿</a></li>
+    			<li><a href="https://chaiwenxin1.github.io/webzuoye/zong.html">冰雪民宿</a></li>
+    			<li><a href="https://liurufeng666.github.io/web-homework/xueli8/index.html">温泉民宿</a></li>
+    			<li><a href="https://duxinyu03.github.io/web2-finalxueli-work/TraditResidBuildings.html">传统民宿</a></li>
     			<li><a href="#">其他</a></li>
     		</ul>
 		</div>
@@ -229,14 +229,14 @@
 	<div class="u">
         <div class="uw">
             <p class="u1">
-                <a href="#">首页</a> | 
-                <a href="共用代码的链接.html">工作机会</a> | 
-                <a href="共用代码的链接.html">信任与安全</a> | 
-                <a href="共用代码的链接.html">多元化与归属感</a> | 
-                <a href="共用代码的链接.html">缤纷体验</a> | 
-                <a href="共用代码的链接.html">开展体验</a> | 
-                <a href="共用代码的链接.html">帮助</a> | 
-                <a href="共用代码的链接.html">法律服务</a>
+                <a href="https://suhan1.github.io/web2/homepage/homepage.html">首页</a> | 
+                <a href="https://lige9.github.io/jsWeb/%E5%85%B1%E7%94%A8%E4%BB%A3%E7%A0%81%E7%9A%84%E9%93%BE%E6%8E%A5.html">工作机会</a> | 
+                <a href="https://lige9.github.io/jsWeb/%E5%85%B1%E7%94%A8%E4%BB%A3%E7%A0%81%E7%9A%84%E9%93%BE%E6%8E%A5.html">信任与安全</a> | 
+                <a href="https://lige9.github.io/jsWeb/%E5%85%B1%E7%94%A8%E4%BB%A3%E7%A0%81%E7%9A%84%E9%93%BE%E6%8E%A5.html">多元化与归属感</a> | 
+                <a href="https://lige9.github.io/jsWeb/%E5%85%B1%E7%94%A8%E4%BB%A3%E7%A0%81%E7%9A%84%E9%93%BE%E6%8E%A5.html">缤纷体验</a> | 
+                <a href="https://lige9.github.io/jsWeb/%E5%85%B1%E7%94%A8%E4%BB%A3%E7%A0%81%E7%9A%84%E9%93%BE%E6%8E%A5.html">开展体验</a> | 
+                <a href="https://lige9.github.io/jsWeb/%E5%85%B1%E7%94%A8%E4%BB%A3%E7%A0%81%E7%9A%84%E9%93%BE%E6%8E%A5.html">帮助</a> | 
+                <a href="https://lige9.github.io/jsWeb/%E5%85%B1%E7%94%A8%E4%BB%A3%E7%A0%81%E7%9A%84%E9%93%BE%E6%8E%A5.html">法律服务</a>
             </p>
             <br>
             <p class="u2">
@@ -246,7 +246,7 @@
     </div>
 </body>
 <!-- 搜索块 -->
-<script>
+<!-- <script>
 	var search = document.getElementById("search");
 	var hidden = document.getElementById("hidden");
 	search.onfocus = function(){
@@ -260,7 +260,7 @@
 		hidden.style.marginTop = "10px";
 	}
 </script>
-<!-- 轮播图 -->
+ --><!-- 轮播图 -->
 <script>
 	var moveBox = document.getElementById("moveBox");
 	var silder = document.getElementById("silder");
@@ -499,7 +499,7 @@
 		}
 	}
 </script>
-<!-- 背景颜色变换 -->
+<!-- 文字颜色变换 -->
 <script>
 	var h = document.getElementsByClassName("h")[0];
 	onload = function(){
